--- a/Task 1/Task_1_YTdf.ipynb
+++ b/Task 1/Task_1_YTdf.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Import the data\n",
-    "df=pd.read_csv('D:\\Intern Career Internship\\Task 1 YouTube Streamer Analysis\\youtubers_df.csv')"
+    "df=pd.read_csv('youtubers_df.csv')"
    ]
   },
   {
